# safe-screenshare

./: pom.xml
.github/workflows/: build.yml
client/: Cargo.toml
client/src/: main.rs
src/main/java/xyz/bl4ckzx/safescreenshare/: SafeScreenSharePlugin.java
src/main/java/xyz/bl4ckzx/safescreenshare/commands/: AutoScreenShareCommand.java  ConsentCommand.java  ScreenShareCommand.java
src/main/resources/: plugin.yml
