[package]
name = "safescreenshare"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
sha2 = "0.10"
hex = "0.4"
sysinfo = "0.30"
winreg = "0.50"
chrono = "0.4"
base64 = "0.21"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
