[package]
name = "safescreenshare"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
sha2 = "0.10"
sysinfo = "0.30"
winreg = "0.50"
chrono = "0.4"
egui = "0.27"
eframe = "0.27"
native-dialog = "0.7"
winapi = { version = "0.3", features = ["winuser", "winbase", "memoryapi", "processthreadsapi", "psapi"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
